# maltaekni-lokaverkefni

./: .flake8  .gitignore  .markdownlint.json  package-lock.json  package.json  readme.md  references.bib
data/: readme.md
data/MIM-GOLD-2_0/: README  mbl.txt  websites.txt
data/MIM-GOLD-EL/: adjudications_release_candidates.json  emails_release_candidates.json  laws_release_candidates.json  radio_tv_news_release_candidates.json  school_essays_release_candidates.json  scienceweb_release_candidates.json  webmedia_release_candidates.json  websites_release_candidates.json  written-to-be-spoken_release_candidates.json
data/MIM-GOLD21.05/: README
data/MIM-GOLD21.05/data/: adjucations.tsv  blog.tsv  books.tsv  emails.tsv  fbl.tsv  laws.tsv  radio-tv-news.tsv  school-essays.tsv  scienceweb.tsv  webmedia.tsv  websites.tsv  written-to-be-spoken.tsv
notes/: entity-relation-types.md  parsing.md  ux-ui.md  web.md
processing/: conll.py  generate_pairs.py  parse_mim_gold_ner.py  pyproject.toml  readme.md  utils.py
processing/tests/: test_conll.py  test_generate_pairs.py  test_parse_mim_gold_ner.py
processing/tests/test_data/: 1.json  2.json  3.json
src/: app.js  db.js  drop.sql  package-lock.json  package.json  readme.md  routes.js  schema.sql  seed.js
src/public/: styles.css
src/views/: _footer.ejs  _header.ejs  about.ejs  index.ejs  instructions.ejs  stats.ejs  v1.ejs  v2.ejs
