[tool.poetry]
name = "parsing"
version = "0.1.0"
description = ""
authors = ["Ólafur Sverrir Kjartansson <kjarni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
pytest-watch = "^4.2.0"
flake8 = "^5.0.4"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
